fix overflow

--- a/css/style_main.css
+++ b/css/style_main.css
@@ -8,8 +8,6 @@ body {
     margin: 0;
     padding: 0;
     display: block;
-}
-html{
     overflow-x: hidden;
 }
 a {
